--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/FaCaiMatchWordLive.storyboard
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/FaCaiMatchWordLive.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Glod BuleHT Match Word Live View Controller-->
+        <!--SasxHT Match Word Live View Controller-->
         <scene sceneID="wrs-5F-zh9">
             <objects>
                 <viewController id="kpW-7D-7SA" customClass="KSasxHTMatchWordLiveViewController" sceneMemberID="viewController">
@@ -118,7 +118,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kec-28-w9Z" userLabel="Viewall">
                                 <rect key="frame" x="10" y="4" width="120" height="32"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gurk_icon_news_time" highlightedImage="icon_news_time" translatesAutoresizingMaskIntoConstraints="NO" id="fQ2-ae-Rmr">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gurk_icon_news_time" highlightedImage="gurk_icon_news_time" translatesAutoresizingMaskIntoConstraints="NO" id="fQ2-ae-Rmr">
                                         <rect key="frame" x="10" y="6" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="RFR-sM-EkR"/>
